super-fenics/jitfailure-dolfin_expression_01dc099ed5ca0282921642a0d7a91af7/error.log
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp: In member function ‘virtual void dolfin::dolfin_expression_01dc099ed5ca0282921642a0d7a91af7::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:37: warning: value computed is not used [-Wunused-value]
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                  ~~~^~~~~~~~~~~
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:76: warning: left operand of comma operator has no effect [-Wunused-value]
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                                                            ^~~
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:79: error: expected ‘)’ before ‘;’ token
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                                                               ^
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:79: error: expected ‘)’ before ‘;’ token
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:86: warning: left operand of comma operator has no effect [-Wunused-value]
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                                                                      ^~~
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:89: error: expected ‘;’ before ‘)’ token
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                                                                         ^
/tmp/tmp4yu9mtyc/dolfin_expression_01dc099ed5ca0282921642a0d7a91af7.cpp:61:91: warning: right operand of comma operator has no effect [-Wunused-value]
           values[0] = -1.0*(0.0*(2.0*(x[0]-0.5), 2.0*(x[1]-0.5))+1.0*(2.0, 1.0; 1.0, 2.0));
                                                                                           ^
